# 200-12-22-cmake-study

./: CMakeLists.txt  Makefile  conanfile.txt
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
configured/: CMakeLists.txt  configure.hpp.in
include/my_lib/: my_lib.h
src/my_lib/: CMakeLists.txt  my_lib.cpp
tests/: CMakeLists.txt  main.cpp
